Fix x-overflow

--- a/src/App.css
+++ b/src/App.css
@@ -355,7 +355,7 @@
   font-size: 100px;
   position: absolute;
   top: 14vh;
-  right: 0vw;
+  right: -12.5vw;
 }
 
 /* Visual Stuff ***************************************************************/
@@ -373,9 +373,11 @@
   display: flex;
   flex-direction: row;
 
-  margin-right: 12vw;
-
   transition: transform 0.001s;
+}
+
+.Grid {
+  margin-right: 12vw;
 }
 
 /* Outline ***/
